--- a/pom.xml
+++ b/pom.xml
@@ -61,16 +61,16 @@
   	<dependency>
   		<groupId>com.sk89q</groupId>
   		<artifactId>WorldGuard</artifactId>
-  		<version>7.0.0-beta-02</version>
+  		<version>7.0.0-SNAPSHOT</version>
   		<scope>system</scope>
-  		<systemPath>${project.basedir}/worldguard-legacy-7.0.0-beta-02.jar</systemPath>
+  		<systemPath>${project.basedir}/worldguard-legacy-7.0.0-SNAPSHOT-dist.jar</systemPath>
   	</dependency>
   	<dependency>
   		<groupId>com.sk89q</groupId>
   		<artifactId>WorldEdit</artifactId>
-  		<version>7.0.0-beta-04</version>
+  		<version>7.0.0-SNAPSHOT</version>
   		<scope>system</scope>
-  		<systemPath>${project.basedir}/worldedit-bukkit-7.0.0-beta-04.jar</systemPath>
+  		<systemPath>${project.basedir}/worldedit-bukkit-7.0.0-SNAPSHOT-dist.jar</systemPath>
   	</dependency>
   </dependencies>
   <version>1.1-SNAPSHOT</version>
